[Mac] Regression: WebContent process's display name is no longer set https://bugs.webkit.org/show_bug.cgi?id=191722 <rdar://problem/45960550>

Reviewed by Per Arne Vollan.

Source/WebCore/PAL:

* pal/spi/cocoa/LaunchServicesSPI.h:

Source/WebKit:

Make sure The WebContent process calls _RegisterApplication() during initialization and
*before* trying to set its display name. Setting the display name fails otherwise.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::initializeProcessName):
(WebKit::WebProcess::platformInitializeProcess):


Canonical link: https://commits.webkit.org/206483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238289 268f45cc-cd09-0410-ab3c-d52691b4dbfc